--- a/config.ini
+++ b/config.ini
@@ -200,10 +200,10 @@ mail.transport.type = "Sendmail"
 ; time.  If the expiration option is missing or left commented out,
 ; uploaded files will always be publicly readable.
 ;
-; storage.adapter = "Omeka_Storage_Adapter_ZendS3"
-; storage.adapterOptions.accessKeyId =
-; storage.adapterOptions.secretAccessKey =
-; storage.adapterOptions.bucket =
+storage.adapter = "Omeka_Storage_Adapter_ZendS3"
+storage.adapterOptions.accessKeyId = 
+storage.adapterOptions.secretAccessKey =
+storage.adapterOptions.bucket = 
 ; storage.adapterOptions.expiration = 10 ; URL expiration time (in minutes)
 ; storage.adapterOptions.endpoint = ; Custom S3 endpoint (optional)
 
